--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sanity studio v3",
+  "name": "sanity-studio-basic-v3",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
